--- a/index.html
+++ b/index.html
@@ -5,81 +5,74 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Viktor Tamayo</title>
   <style>
+    :root {
+      --bg: #ffffff;
+      --text: #000000;
+      --link: #0077cc;
+    }
+    @media (prefers-color-scheme: dark) {
+      :root {
+        --bg: #121212;
+        --text: #ffffff;
+        --link: #4da3ff;
+      }
+    }
+
     body {
       margin: 0;
-      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-      background: #f9f9f9;
-      color: #333;
+      font-family: system-ui, sans-serif;
+      background: var(--bg);
+      color: var(--text);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
+      justify-content: center;
       text-align: center;
+      padding: 2rem;
     }
-    header {
-      background: linear-gradient(135deg, #667eea, #764ba2);
-      padding: 60px 20px;
-      color: white;
+
+    img {
+      max-width: 90%;
+      height: auto;
+      border-radius: 16px;
+      margin: 2rem 0;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
     }
-    header h1 {
-      font-size: 2.5em;
-      margin: 0;
-    }
-    header p {
-      font-size: 1.2em;
-      opacity: 0.9;
-    }
-    nav {
-      margin: 20px 0;
-    }
+
     nav a {
-      margin: 0 15px;
+      margin: 0 1rem;
       text-decoration: none;
-      color: #667eea;
-      font-weight: bold;
+      color: var(--link);
+      font-weight: 500;
     }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    .content {
-      padding: 40px 20px;
-    }
+
     footer {
-      background: #222;
-      color: white;
-      padding: 30px 20px;
-      margin-top: 40px;
+      margin-top: 2rem;
     }
-    .social a {
-      margin: 0 10px;
-      color: white;
+
+    footer a {
+      margin: 0 0.5rem;
       text-decoration: none;
-      font-weight: bold;
-    }
-    .social a:hover {
-      text-decoration: underline;
+      color: var(--link);
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Viktor Tamayo</h1>
-    <p>Osobní prezentace & portfolio</p>
-  </header>
+  <h1>Viktor Tamayo</h1>
   <nav>
-    <a href="index.html">Domů</a>
-    <a href="o-mne.html">O mně</a>
+    <a href="about.html">O mně</a>
     <a href="autodevadesatky.html">AutoDevadesátky</a>
-    <a href="kontakt.html">Kontakt</a>
+    <a href="contact.html">Kontakt</a>
   </nav>
-  <div class="content">
-    <h2>Vítejte!</h2>
-    <p>Toto je moje osobní stránka a portfolio.</p>
-  </div>
+
+  <img src="profil.jpg" alt="Viktor Tamayo">
+
   <footer>
-    <p>Sledujte mě na sociálních sítích:</p>
-    <div class="social">
-      <a href="https://www.tiktok.com/@autodevadesatky" target="_blank">TikTok</a>
-      <a href="https://www.instagram.com/viktortamayo" target="_blank">Instagram</a>
-      <a href="https://www.youtube.com/@viki1982" target="_blank">YouTube</a>
-      <a href="https://x.com/viktor_tamayo" target="_blank">X (Twitter)</a>
-    </div>
+    <a href="https://www.tiktok.com/@autodevadesatky">TikTok</a> |
+    <a href="https://www.instagram.com/viktortamayo">Instagram</a> |
+    <a href="https://www.youtube.com/@viki1982">YouTube</a> |
+    <a href="https://x.com/viktor_tamayo">X</a>
   </footer>
 </body>
 </html>
