--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <a href="contact.html">Kontakt</a>
   </nav>
 
-  <img src="profil.jpg" alt="Viktor Tamayo">
+  <img src="profile_pic.jpeg" alt="Viktor Tamayo">
 
   <footer>
     <a href="https://www.tiktok.com/@autodevadesatky">TikTok</a> |
