--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
   <img src="profil.jpg" alt="Viktor Tamayo">
 
   <footer>
+    <a href="https://www.linkedin.com/in/viktor-tamayo">LinkedIn</a> |
     <a href="https://www.tiktok.com/@autodevadesatky">TikTok</a> |
     <a href="https://www.instagram.com/viktortamayo">Instagram</a> |
     <a href="https://www.youtube.com/@viki1982">YouTube</a> |
