--- a/index.html
+++ b/index.html
@@ -6,39 +6,48 @@
   <title>Viktor Tamayo</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    body { margin:0; font-family:'Inter', sans-serif; background:#fff; color:#111; }
-    .top { width:100%; height:50vh; }
-    .top img { width:100%; height:100%; object-fit:cover; }
-    .content { text-align:center; padding:2rem; }
-    h1 { font-size:2.5rem; margin-bottom:1rem; }
-    p { font-size:1.2rem; margin-bottom:2rem; }
-    a {
-      margin:0 10px;
-      text-decoration:none;
-      font-weight:600;
-      color:#0071e3;
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      text-align: center;
+      background: #fff;
+      color: #111;
     }
-    footer { text-align:center; padding:2rem; }
+    img.hero {
+      width: 100%;
+      height: 60vh;
+      object-fit: cover;
+    }
+    h1 {
+      font-size: 2.5rem;
+      margin: 1.5rem 0 0.5rem;
+    }
+    p {
+      font-size: 1.2rem;
+      margin-bottom: 2rem;
+    }
+    a {
+      margin: 0 10px;
+      text-decoration: none;
+      font-weight: 600;
+      color: #0071e3;
+    }
     @media (prefers-color-scheme: dark) {
-      body { background:#111; color:#eee; }
-      a { color:#0a84ff; }
+      body { background: #111; color: #eee; }
+      a { color: #0a84ff; }
     }
   </style>
 </head>
 <body>
-  <div class="top">
-    <img src="profile_pic.jpeg" alt="Profil">
+  <img src="profile_pic.jpeg" alt="Profil" class="hero">
+  <h1>Viktor Tamayo</h1>
+  <p>Komunikace • Auta • Digitální svět</p>
+  <div>
+    <a href="about.html">O mně</a>
+    <a href="autodevadesatky.html">AutoDevadesátky</a>
+    <a href="contact.html">Kontakt</a>
   </div>
-  <div class="content">
-    <h1>Viktor Tamayo</h1>
-    <p>Komunikace • Auta • Digitální svět</p>
-    <div>
-      <a href="about.html">O mně</a>
-      <a href="autodevadesatky.html">AutoDevadesátky</a>
-      <a href="contact.html">Kontakt</a>
-    </div>
-  </div>
-  <footer>
+  <footer style="margin:3rem 0;">
     <a href="https://www.tiktok.com/@autodevadesatky">TikTok</a>
     <a href="https://www.instagram.com/viktortamayo">Instagram</a>
     <a href="https://www.youtube.com/@viki1982">YouTube</a>
