--- a/index.html
+++ b/index.html
@@ -6,48 +6,47 @@
   <title>Viktor Tamayo</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    body {
-      margin: 0;
-      font-family: 'Inter', sans-serif;
-      text-align: center;
-      background: #fff;
-      color: #111;
-    }
-    img.hero {
+    body, html { margin: 0; height: 100%; font-family: 'Inter', sans-serif; }
+    .hero {
+      position: relative;
       width: 100%;
-      height: 60vh;
-      object-fit: cover;
+      height: 100vh;
+      background: url('profile_pic.jpeg') no-repeat center/cover;
     }
-    h1 {
-      font-size: 2.5rem;
-      margin: 1.5rem 0 0.5rem;
+    .overlay {
+      position: absolute;
+      top:0; left:0; right:0; bottom:0;
+      background: rgba(0,0,0,0.4);
+      display:flex; 
+      flex-direction:column;
+      justify-content:center; 
+      align-items:center;
+      text-align:center;
+      color:#fff;
     }
-    p {
-      font-size: 1.2rem;
-      margin-bottom: 2rem;
-    }
+    h1 { font-size: 3rem; margin-bottom: 1rem; }
+    p { font-size: 1.3rem; margin-bottom: 2rem; }
     a {
       margin: 0 10px;
       text-decoration: none;
       font-weight: 600;
-      color: #0071e3;
-    }
-    @media (prefers-color-scheme: dark) {
-      body { background: #111; color: #eee; }
-      a { color: #0a84ff; }
+      color: #0a84ff;
     }
   </style>
 </head>
 <body>
-  <img src="profile_pic.jpeg" alt="Profil" class="hero">
-  <h1>Viktor Tamayo</h1>
-  <p>Komunikace • Auta • Digitální svět</p>
-  <div>
-    <a href="about.html">O mně</a>
-    <a href="autodevadesatky.html">AutoDevadesátky</a>
-    <a href="contact.html">Kontakt</a>
+  <div class="hero">
+    <div class="overlay">
+      <h1>Viktor Tamayo</h1>
+      <p>Komunikace • Auta • Digitální svět</p>
+      <div>
+        <a href="about.html">O mně</a>
+        <a href="autodevadesatky.html">AutoDevadesátky</a>
+        <a href="contact.html">Kontakt</a>
+      </div>
+    </div>
   </div>
-  <footer style="margin:3rem 0;">
+  <footer style="text-align:center; padding:2rem;">
     <a href="https://www.tiktok.com/@autodevadesatky">TikTok</a>
     <a href="https://www.instagram.com/viktortamayo">Instagram</a>
     <a href="https://www.youtube.com/@viki1982">YouTube</a>
