--- a/index.html
+++ b/index.html
@@ -4,53 +4,98 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Viktor Tamayo</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    body, html { margin: 0; height: 100%; font-family: 'Inter', sans-serif; }
-    .hero {
+    body {
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      color: #111;
+      background-color: #fff;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+    header {
       position: relative;
-      width: 100%;
-      height: 100vh;
-      background: url('profile_pic.jpeg') no-repeat center/cover;
+      padding: 1rem 2rem;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
     }
-    .overlay {
-      position: absolute;
-      top:0; left:0; right:0; bottom:0;
-      background: rgba(0,0,0,0.4);
-      display:flex; 
-      flex-direction:column;
-      justify-content:center; 
-      align-items:center;
-      text-align:center;
-      color:#fff;
-    }
-    h1 { font-size: 3rem; margin-bottom: 1rem; }
-    p { font-size: 1.3rem; margin-bottom: 2rem; }
-    a {
-      margin: 0 10px;
+    header nav a {
+      margin-left: 1rem;
       text-decoration: none;
-      font-weight: 600;
-      color: #0a84ff;
+      color: #111;
+      font-size: 1.2rem;
+    }
+    header nav a:hover {
+      opacity: 0.6;
+    }
+    main {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      padding: 2rem;
+    }
+    main h1 {
+      font-size: 3rem;
+      font-weight: 700;
+      margin: 0;
+    }
+    main p {
+      font-size: 1.3rem;
+      color: #555;
+      margin: 0.5rem 0 2rem;
+    }
+    .hero-image {
+      width: 100%;
+      max-height: 70vh;
+      object-fit: cover;
+      margin-top: 2rem;
+      border-radius: 0;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+    }
+    footer nav a {
+      margin: 0 1rem;
+      text-decoration: none;
+      color: #111;
+      font-size: 1rem;
+    }
+    footer nav a:hover {
+      opacity: 0.6;
     }
   </style>
 </head>
 <body>
-  <div class="hero">
-    <div class="overlay">
-      <h1>Viktor Tamayo</h1>
-      <p>Komunikace • Auta • Digitální svět</p>
-      <div>
-        <a href="about.html">O mně</a>
-        <a href="autodevadesatky.html">AutoDevadesátky</a>
-        <a href="contact.html">Kontakt</a>
-      </div>
-    </div>
-  </div>
-  <footer style="text-align:center; padding:2rem;">
-    <a href="https://www.tiktok.com/@autodevadesatky">TikTok</a>
-    <a href="https://www.instagram.com/viktortamayo">Instagram</a>
-    <a href="https://www.youtube.com/@viki1982">YouTube</a>
-    <a href="https://x.com/viktor_tamayo">X</a>
+  <header>
+    <!-- sociální sítě vpravo nahoře -->
+    <nav>
+      <a href="https://www.tiktok.com/@autodevadesatky" target="_blank">🎵</a>
+      <a href="https://www.instagram.com/viktortamayo" target="_blank">📸</a>
+      <a href="https://www.youtube.com/@viki1982" target="_blank">▶️</a>
+      <a href="https://x.com/viktor_tamayo" target="_blank">✖️</a>
+    </nav>
+  </header>
+
+  <main>
+    <!-- hlavní text -->
+    <h1>Viktor Tamayo</h1>
+    <p>Komunikace • Auta • Digitální svět</p>
+    <img src="profile_pic.jpeg" alt="Profilová fotografie" class="hero-image">
+  </main>
+
+  <footer>
+    <!-- odkazy na stránky dole -->
+    <nav>
+      <a href="about.html">O mně</a>
+      <a href="autodevadesatky.html">AutoDevadesátky</a>
+      <a href="contact.html">Kontakt</a>
+    </nav>
   </footer>
 </body>
 </html>
