--- a/index.html
+++ b/index.html
@@ -5,97 +5,103 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Viktor Tamayo</title>
   <style>
+    /* Reset */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
     body {
-      margin: 0;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      color: #111;
-      background-color: #fff;
       display: flex;
       flex-direction: column;
-      min-height: 100vh;
+      justify-content: space-between;
+      height: 100vh;
+      color: #000;
     }
-    header {
-      position: relative;
-      padding: 1rem 2rem;
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
-    }
-    header nav a {
-      margin-left: 1rem;
-      text-decoration: none;
-      color: #111;
-      font-size: 1.2rem;
-    }
-    header nav a:hover {
-      opacity: 0.6;
-    }
-    main {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      padding: 2rem;
-    }
-    main h1 {
-      font-size: 3rem;
-      font-weight: 700;
-      margin: 0;
-    }
-    main p {
-      font-size: 1.3rem;
-      color: #555;
-      margin: 0.5rem 0 2rem;
-    }
-    .hero-image {
+
+    /* Pozadí */
+    .background {
+      position: fixed;
+      top: 0;
+      left: 0;
       width: 100%;
-      max-height: 70vh;
-      object-fit: cover;
-      margin-top: 2rem;
-      border-radius: 0;
+      height: 100%;
+      background: url("profile_pic.jpeg") no-repeat center center/cover;
+      z-index: -1;
     }
-    footer {
+
+    /* Hlavní text */
+    .center-text {
       text-align: center;
-      padding: 1rem;
+      font-size: 2rem;
+      font-weight: 600;
+      margin-top: 20vh;
     }
-    footer nav a {
-      margin: 0 1rem;
-      text-decoration: none;
-      color: #111;
+
+    /* Navigace */
+    .top-right {
+      position: absolute;
+      top: 20px;
+      right: 30px;
+      display: flex;
+      gap: 20px;
       font-size: 1rem;
     }
-    footer nav a:hover {
-      opacity: 0.6;
+
+    .top-right a {
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    /* Odkazy dole */
+    .bottom-center {
+      text-align: center;
+      margin-bottom: 30px;
+      font-size: 1.2rem;
+    }
+
+    .bottom-center a {
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    /* Light / Dark mód */
+    @media (prefers-color-scheme: light) {
+      body { color: #000; }
+      a { color: #000; }
+    }
+
+    @media (prefers-color-scheme: dark) {
+      body { color: #fff; }
+      a { color: #fff; }
     }
   </style>
 </head>
 <body>
-  <header>
-    <!-- sociální sítě vpravo nahoře -->
-    <nav>
-      <a href="https://www.tiktok.com/@autodevadesatky" target="_blank">🎵</a>
-      <a href="https://www.instagram.com/viktortamayo" target="_blank">📸</a>
-      <a href="https://www.youtube.com/@viki1982" target="_blank">▶️</a>
-      <a href="https://x.com/viktor_tamayo" target="_blank">✖️</a>
-    </nav>
-  </header>
+  <div class="background"></div>
 
-  <main>
-    <!-- hlavní text -->
+  <!-- Odkazy na sociální sítě nahoře vpravo -->
+  <div class="top-right">
+    <a href="https://www.tiktok.com/@autodevadesatky">TikTok</a>
+    <a href="https://www.instagram.com/viktortamayo">Instagram</a>
+    <a href="https://www.youtube.com/@viki1982">YouTube</a>
+    <a href="https://x.com/viktor_tamayo">X</a>
+  </div>
+
+  <!-- Hlavní text -->
+  <div class="center-text">
     <h1>Viktor Tamayo</h1>
     <p>Komunikace • Auta • Digitální svět</p>
-    <img src="profile_pic.jpeg" alt="Profilová fotografie" class="hero-image">
-  </main>
+  </div>
 
-  <footer>
-    <!-- odkazy na stránky dole -->
-    <nav>
-      <a href="about.html">O mně</a>
-      <a href="autodevadesatky.html">AutoDevadesátky</a>
-      <a href="contact.html">Kontakt</a>
-    </nav>
-  </footer>
+  <!-- Navigace dole -->
+  <div class="bottom-center">
+    <a href="about.html">O mně</a>
+    <a href="autodevadesatky.html">AutoDevadesátky</a>
+    <a href="contact.html">Kontakt</a>
+  </div>
 </body>
 </html>
