--- a/index.html
+++ b/index.html
@@ -4,104 +4,103 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Viktor Tamayo</title>
+  
+  <!-- Font Awesome pro ikonky -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
   <style>
-    /* Reset */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
+    :root {
+      --light-bg: #ffffff;
+      --light-text: #000000;
+      --dark-bg: #000000;
+      --dark-text: #ffffff;
     }
 
     body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
+      margin: 0;
       height: 100vh;
-      color: #000;
+      width: 100vw;
+      font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Arial, sans-serif;
+      background: var(--light-bg);
+      color: var(--light-text);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      overflow: hidden;
+      text-align: center;
     }
 
-    /* Pozadí */
-    .background {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: url("profile_pic.jpeg") no-repeat center center/cover;
+    /* Přepnutí barvy podle systému */
+    @media (prefers-color-scheme: dark) {
+      body {
+        background: var(--dark-bg);
+        color: var(--dark-text);
+      }
+    }
+
+    /* Obrázek na pozadí přes celou obrazovku */
+    body::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: url('background.jpg') no-repeat center center;
+      background-size: cover;
       z-index: -1;
     }
 
-    /* Hlavní text */
-    .center-text {
-      text-align: center;
-      font-size: 2rem;
-      font-weight: 600;
-      margin-top: 20vh;
+    /* Text uprostřed */
+    .content {
+      z-index: 2;
     }
 
-    /* Navigace */
-    .top-right {
+    .content h1 {
+      font-size: 2.5rem;
+      margin: 0;
+      font-weight: 600;
+    }
+
+    .content p {
+      font-size: 1.2rem;
+      margin-top: 10px;
+      opacity: 0.85;
+    }
+
+    /* Ikonky vpravo nahoře */
+    .social-icons {
       position: absolute;
       top: 20px;
       right: 30px;
       display: flex;
       gap: 20px;
-      font-size: 1rem;
     }
 
-    .top-right a {
-      text-decoration: none;
-      font-weight: 500;
+    .social-icons a {
+      color: inherit;
+      font-size: 1.8rem;
+      transition: color 0.3s ease;
     }
 
-    /* Odkazy dole */
-    .bottom-center {
-      text-align: center;
-      margin-bottom: 30px;
-      font-size: 1.2rem;
-    }
-
-    .bottom-center a {
-      margin: 0 15px;
-      text-decoration: none;
-      font-weight: 500;
-    }
-
-    /* Light / Dark mód */
-    @media (prefers-color-scheme: light) {
-      body { color: #000; }
-      a { color: #000; }
-    }
-
-    @media (prefers-color-scheme: dark) {
-      body { color: #fff; }
-      a { color: #fff; }
+    .social-icons a:hover {
+      color: #007aff; /* Apple modrá */
     }
   </style>
 </head>
 <body>
-  <div class="background"></div>
 
-  <!-- Odkazy na sociální sítě nahoře vpravo -->
-  <div class="top-right">
-    <a href="https://www.tiktok.com/@autodevadesatky">TikTok</a>
-    <a href="https://www.instagram.com/viktortamayo">Instagram</a>
-    <a href="https://www.youtube.com/@viki1982">YouTube</a>
-    <a href="https://x.com/viktor_tamayo">X</a>
+  <!-- Ikonky sociálních sítí -->
+  <div class="social-icons">
+    <a href="https://www.linkedin.com/in/tvoje-adresa" target="_blank"><i class="fab fa-linkedin"></i></a>
+    <a href="https://www.youtube.com/@tvoje-adresa" target="_blank"><i class="fab fa-youtube"></i></a>
+    <a href="https://www.instagram.com/tvoje-adresa" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.tiktok.com/@autodevadesatky" target="_blank"><i class="fab fa-tiktok"></i></a>
   </div>
 
-  <!-- Hlavní text -->
-  <div class="center-text">
+  <!-- Text uprostřed -->
+  <div class="content">
     <h1>Viktor Tamayo</h1>
-    <p>Komunikace • Auta • Digitální svět</p>
+    <p>Communication, media & automotive enthusiast</p>
   </div>
 
-  <!-- Navigace dole -->
-  <div class="bottom-center">
-    <a href="about.html">O mně</a>
-    <a href="autodevadesatky.html">AutoDevadesátky</a>
-    <a href="contact.html">Kontakt</a>
-  </div>
 </body>
 </html>
