--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       content: "";
       position: absolute;
       inset: 0;
-      background: url('background.jpg') no-repeat center center;
+      background: url('profile_pic.jpeg') no-repeat center center;
       background-size: cover;
       z-index: -1;
     }
