--- a/index.html
+++ b/index.html
@@ -4,103 +4,121 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Viktor Tamayo</title>
-  
-  <!-- Font Awesome pro ikonky -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
   <style>
-    :root {
-      --light-bg: #ffffff;
-      --light-text: #000000;
-      --dark-bg: #000000;
-      --dark-text: #ffffff;
-    }
-
-    body {
+    body, html {
       margin: 0;
-      height: 100vh;
-      width: 100vw;
-      font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Arial, sans-serif;
-      background: var(--light-bg);
-      color: var(--light-text);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      position: relative;
-      overflow: hidden;
-      text-align: center;
+      padding: 0;
+      height: 100%;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      background-color: var(--bg);
+      color: var(--text);
     }
 
-    /* Přepnutí barvy podle systému */
+    :root {
+      --bg: #ffffff;
+      --text: #000000;
+    }
+
     @media (prefers-color-scheme: dark) {
-      body {
-        background: var(--dark-bg);
-        color: var(--dark-text);
+      :root {
+        --bg: #000000;
+        --text: #ffffff;
       }
     }
 
-    /* Obrázek na pozadí přes celou obrazovku */
-    body::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background: url('profile_pic.jpeg') no-repeat center center;
-      background-size: cover;
-      z-index: -1;
-    }
-
-    /* Text uprostřed */
-    .content {
-      z-index: 2;
-    }
-
-    .content h1 {
-      font-size: 2.5rem;
-      margin: 0;
-      font-weight: 600;
-    }
-
-    .content p {
-      font-size: 1.2rem;
-      margin-top: 10px;
-      opacity: 0.85;
-    }
-
-    /* Ikonky vpravo nahoře */
-    .social-icons {
-      position: absolute;
-      top: 20px;
-      right: 30px;
+    header {
+      background: url('profile_pic.jpeg') no-repeat center center/cover;
+      height: 100vh;
       display: flex;
-      gap: 20px;
+      flex-direction: column;
+      justify-content: flex-start;
+      text-align: center;
+      position: relative;
+      color: white;
+    }
+
+    nav {
+      display: flex;
+      justify-content: space-between;
+      padding: 1.5rem 2rem;
+      position: absolute;
+      width: 100%;
+      top: 0;
+      left: 0;
+    }
+
+    nav a {
+      margin: 0 1rem;
+      color: white;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .social-icons {
+      display: flex;
+      gap: 1rem;
     }
 
     .social-icons a {
-      color: inherit;
-      font-size: 1.8rem;
-      transition: color 0.3s ease;
+      color: white;
+      font-size: 1.2rem;
     }
 
-    .social-icons a:hover {
-      color: #007aff; /* Apple modrá */
+    .hero-text {
+      margin-top: 30vh; /* posune text nahoru/dolů */
+    }
+
+    section {
+      padding: 4rem 2rem;
+      max-width: 900px;
+      margin: auto;
+    }
+
+    h1, h2 {
+      margin-bottom: 1rem;
+    }
+
+    footer {
+      text-align: center;
+      padding: 2rem;
+      font-size: 0.9rem;
     }
   </style>
 </head>
 <body>
+  <header>
+    <nav>
+      <div>
+        <a href="#home">Domů</a>
+        <a href="#portfolio">Portfolio</a>
+        <a href="#social">Sociální sítě</a>
+      </div>
+      <div class="social-icons">
+        <a href="https://www.linkedin.com/in/viktor-tamayo"><i class="fab fa-linkedin"></i></a>
+        <a href="www.x.com/viktor_tamayo"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.youtube.com/viki1982"><i class="fab fa-youtube"></i></a>
+        <a href="https://www.tiktok.com/@autodevadesatky"><i class="fab fa-TikTok"></i></a>
+      </div>
+    </nav>
+    <div class="hero-text">
+      <h1>Viktor Tamayo</h1>
+      <p>Communication, media & automotive enthusiast</p>
+    </div>
+  </header>
 
-  <!-- Ikonky sociálních sítí -->
-  <div class="social-icons">
-    <a href="https://www.linkedin.com/in/tvoje-adresa" target="_blank"><i class="fab fa-linkedin"></i></a>
-    <a href="https://www.youtube.com/@tvoje-adresa" target="_blank"><i class="fab fa-youtube"></i></a>
-    <a href="https://www.instagram.com/tvoje-adresa" target="_blank"><i class="fab fa-instagram"></i></a>
-    <a href="https://www.tiktok.com/@autodevadesatky" target="_blank"><i class="fab fa-tiktok"></i></a>
-  </div>
+  <section id="portfolio">
+    <h2>Portfolio</h2>
+    <p>Moje projekty budou brzy doplněny.</p>
+  </section>
 
-  <!-- Text uprostřed -->
-  <div class="content">
-    <h1>Viktor Tamayo</h1>
-    <p>Communication, media & automotive enthusiast</p>
-  </div>
+  <section id="social">
+    <h2>Sociální sítě</h2>
+    <p>Zde budou odkazy na mé sociální profily.</p>
+  </section>
 
+  <footer>
+    &copy; 2025 Viktor Tamayo
+  </footer>
 </body>
 </html>
