--- a/index.html
+++ b/index.html
@@ -5,51 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Viktor Tamayo</title>
   <link rel="stylesheet" href="assets/style.css">
-  <!-- Ikonky -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-  <div class="hero">
-    <div class="overlay"></div>
-    <header>
-      <div class="logo">Viktor Tamayo</div>
-      <nav>
-        <ul>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#social">Sociální sítě</a></li>
-          <li><a href="#kontakt">Kontakt</a></li>
-        </ul>
-      </nav>
-      <div class="social-icons">
-        <a href="#"><i class="fab fa-linkedin"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-youtube"></i></a>
-      </div>
-    </header>
-    <div class="hero-text">
+  <div class="overlay"></div>
+
+  <header>
+    <div class="logo">
       <h1>Viktor Tamayo</h1>
       <p>Communication, media & automotive enthusiast</p>
-      <a href="#portfolio" class="apple-btn">Zjistit více</a>
     </div>
-  </div>
+    <nav class="socials">
+      <a href="#"><i class="fab fa-linkedin"></i></a>
+      <a href="#"><i class="fab fa-youtube"></i></a>
+      <a href="#"><i class="fab fa-instagram"></i></a>
+    </nav>
+  </header>
 
-  <section id="portfolio">
-    <h2>Portfolio</h2>
-    <p>Zde bude portfolio projektů a ukázky práce.</p>
-  </section>
-
-  <section id="social">
-    <h2>Sociální sítě</h2>
-    <p>Odkazy na mé profily: LinkedIn, Instagram, YouTube.</p>
-  </section>
-
-  <section id="kontakt">
-    <h2>Kontakt</h2>
-    <p>Email: <a href="mailto:viktor@example.com">viktor@example.com</a></p>
-  </section>
+  <main>
+    <section class="intro">
+      <button class="apple-button"> Portfolio</button>
+    </section>
+  </main>
 
   <footer>
-    <p>© 2025 Viktor Tamayo</p>
+    <p><a href="#">Moje stránky</a></p>
   </footer>
 </body>
 </html>
