--- a/index.html
+++ b/index.html
@@ -4,32 +4,370 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Viktor Tamayo</title>
-  <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <style>
+    /* Reset */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      color: white;
+      min-height: 100vh;
+      position: relative;
+      overflow-x: hidden;
+      background: #000;
+    }
+
+    /* Hlavní pozadí s obrázkem */
+    .hero-background {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: url('profile_pic.jpeg') no-repeat center center;
+      background-size: cover;
+      z-index: -2;
+      transition: transform 0.3s ease;
+    }
+
+    .hero-background::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(135deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.6) 100%);
+      z-index: 1;
+    }
+
+    /* Navigace */
+    nav {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      padding: 20px 40px;
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(20px);
+      -webkit-backdrop-filter: blur(20px);
+      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+      z-index: 1000;
+      transition: all 0.3s ease;
+    }
+
+    .nav-content {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+
+    .logo-nav {
+      font-size: 18px;
+      font-weight: 600;
+      color: white;
+      text-decoration: none;
+      opacity: 0;
+      animation: fadeInDown 1s ease 0.5s forwards;
+    }
+
+    .socials {
+      display: flex;
+      gap: 20px;
+      opacity: 0;
+      animation: fadeInDown 1s ease 0.7s forwards;
+    }
+
+    .socials a {
+      color: white;
+      font-size: 20px;
+      transition: all 0.3s ease;
+      padding: 8px;
+      border-radius: 50%;
+      background: rgba(255, 255, 255, 0.1);
+    }
+
+    .socials a:hover {
+      background: rgba(255, 255, 255, 0.2);
+      transform: translateY(-2px);
+    }
+
+    /* Hlavní hero sekce */
+    .hero {
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      position: relative;
+      z-index: 10;
+    }
+
+    .hero-content {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 0 40px;
+    }
+
+    .hero h1 {
+      font-size: clamp(3rem, 8vw, 6rem);
+      font-weight: 700;
+      margin-bottom: 20px;
+      opacity: 0;
+      animation: fadeInUp 1s ease 0.3s forwards;
+      letter-spacing: -0.02em;
+      background: linear-gradient(135deg, #ffffff 0%, #f0f0f0 100%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+    }
+
+    .hero-subtitle {
+      font-size: clamp(1.2rem, 3vw, 1.8rem);
+      margin-bottom: 40px;
+      opacity: 0.9;
+      opacity: 0;
+      animation: fadeInUp 1s ease 0.5s forwards;
+      font-weight: 300;
+      line-height: 1.4;
+    }
+
+    .hero-buttons {
+      display: flex;
+      gap: 20px;
+      justify-content: center;
+      flex-wrap: wrap;
+      opacity: 0;
+      animation: fadeInUp 1s ease 0.7s forwards;
+    }
+
+    .apple-button {
+      background: rgba(255, 255, 255, 0.9);
+      color: #1d1d1f;
+      font-size: 16px;
+      font-weight: 500;
+      padding: 12px 24px;
+      border-radius: 50px;
+      border: none;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      backdrop-filter: blur(20px);
+      min-width: 140px;
+    }
+
+    .apple-button:hover {
+      background: white;
+      transform: translateY(-2px);
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+    }
+
+    .apple-button.secondary {
+      background: rgba(255, 255, 255, 0.1);
+      color: white;
+      border: 1px solid rgba(255, 255, 255, 0.3);
+    }
+
+    .apple-button.secondary:hover {
+      background: rgba(255, 255, 255, 0.2);
+      border-color: rgba(255, 255, 255, 0.5);
+    }
+
+    /* Scroll indikátor */
+    .scroll-indicator {
+      position: absolute;
+      bottom: 40px;
+      left: 50%;
+      transform: translateX(-50%);
+      opacity: 0;
+      animation: fadeIn 1s ease 2s forwards, bounce 2s infinite 3s;
+    }
+
+    .scroll-indicator i {
+      font-size: 24px;
+      color: rgba(255, 255, 255, 0.7);
+    }
+
+    /* Footer */
+    footer {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      padding: 20px 40px;
+      text-align: center;
+      z-index: 1000;
+      opacity: 0;
+      animation: fadeIn 1s ease 1.5s forwards;
+    }
+
+    footer a {
+      color: rgba(255, 255, 255, 0.7);
+      text-decoration: none;
+      font-size: 14px;
+      transition: all 0.3s ease;
+    }
+
+    footer a:hover {
+      color: white;
+    }
+
+    /* Animace */
+    @keyframes fadeInUp {
+      from {
+        opacity: 0;
+        transform: translateY(30px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @keyframes fadeInDown {
+      from {
+        opacity: 0;
+        transform: translateY(-30px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    @keyframes bounce {
+      0%, 20%, 50%, 80%, 100% {
+        transform: translateX(-50%) translateY(0);
+      }
+      40% {
+        transform: translateX(-50%) translateY(-10px);
+      }
+      60% {
+        transform: translateX(-50%) translateY(-5px);
+      }
+    }
+
+    /* Responsivní design */
+    @media (max-width: 768px) {
+      nav {
+        padding: 15px 20px;
+      }
+
+      .hero-content {
+        padding: 0 20px;
+      }
+
+      .hero-buttons {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .apple-button {
+        width: 200px;
+      }
+
+      footer {
+        padding: 15px 20px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .socials {
+        gap: 15px;
+      }
+
+      .socials a {
+        font-size: 18px;
+        padding: 6px;
+      }
+    }
+
+    /* Hover efekt pro pozadí */
+    body:hover .hero-background {
+      transform: scale(1.02);
+    }
+
+    /* Glassmorphism efekt */
+    .glass {
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+    }
+  </style>
 </head>
 <body>
-  <div class="overlay"></div>
+  <div class="hero-background"></div>
 
-  <header>
-    <div class="logo">
-      <h1>Viktor Tamayo</h1>
-      <p>Communication, media & automotive enthusiast</p>
+  <nav>
+    <div class="nav-content">
+      <a href="#" class="logo-nav">Viktor Tamayo</a>
+      <div class="socials">
+        <a href="#" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+        <a href="#" title="YouTube"><i class="fab fa-youtube"></i></a>
+        <a href="#" title="Instagram"><i class="fab fa-instagram"></i></a>
+      </div>
     </div>
-    <nav class="socials">
-      <a href="#"><i class="fab fa-linkedin"></i></a>
-      <a href="#"><i class="fab fa-youtube"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
-    </nav>
-  </header>
+  </nav>
 
   <main>
-    <section class="intro">
-      <button class="apple-button">Portfolio</button>
+    <section class="hero">
+      <div class="hero-content">
+        <h1>Viktor Tamayo</h1>
+        <p class="hero-subtitle">Communication, media & automotive enthusiast</p>
+        <div class="hero-buttons">
+          <button class="apple-button">Portfolio</button>
+          <button class="apple-button secondary">Kontakt</button>
+        </div>
+      </div>
+      <div class="scroll-indicator">
+        <i class="fas fa-chevron-down"></i>
+      </div>
     </section>
   </main>
 
   <footer>
-    <p><a href="#">Moje stránky</a></p>
+    <p><a href="#">© 2025 Viktor Tamayo. Všechna práva vyhrazena.</a></p>
   </footer>
+
+  <script>
+    // Plynulý scroll efekt pro navigaci
+    document.addEventListener('scroll', function() {
+      const nav = document.querySelector('nav');
+      if (window.scrollY > 50) {
+        nav.style.background = 'rgba(0, 0, 0, 0.8)';
+      } else {
+        nav.style.background = 'rgba(255, 255, 255, 0.1)';
+      }
+    });
+
+    // Parallax efekt pro pozadí
+    document.addEventListener('mousemove', function(e) {
+      const background = document.querySelector('.hero-background');
+      const x = (e.clientX / window.innerWidth) * 10;
+      const y = (e.clientY / window.innerHeight) * 10;
+      background.style.transform = `translate(${x}px, ${y}px) scale(1.02)`;
+    });
+
+    // Klik na tlačítka
+    document.querySelectorAll('.apple-button').forEach(button => {
+      button.addEventListener('click', function() {
+        // Zde můžete přidat funkcionalitu pro tlačítka
+        console.log('Kliknuto na:', this.textContent);
+      });
+    });
+  </script>
 </body>
 </html>
