--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
     .about-image {
       width: 300px;
-      height: 300px;
+      height: 372px;
       border-radius: 20px;
       overflow: hidden;
       box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
@@ -258,6 +258,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      object-position: center top;
     }
 
     .about-text h2 {
