--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
     .timeline::before {
       content: '';
       position: absolute;
-      left: 120px;
+      left: 180px;
       top: 0;
       height: 100%;
       width: 3px;
@@ -771,7 +771,7 @@
                 </div>
               </div>
               <div class="timeline-item">
-                <div class="timeline-year">2024 - současnost</div>
+                <div class="timeline-year">2024</div>
                 <div class="timeline-content">
                   <h3>Survivor</h3>
                   <p>Storyteller & reportér</p>
