--- a/index.html
+++ b/index.html
@@ -772,9 +772,9 @@
                 </div>
               </div>
               <div class="timeline-item">
-                <div class="timeline-year">2024</div>
+                <div class="timeline-year">2025</div>
                 <div class="timeline-content">
-                  <h3>Survivor</h3>
+                  <h3>Survivor Reality Show</h3>
                   <p>Storyteller & reportér</p>
                 </div>
               </div>
