--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
       }
     }
 
-    /* Responsivní design */
+    /* Responzivní design */
     @media (max-width: 768px) {
       nav {
         padding: 15px 20px;
@@ -793,20 +793,20 @@
         <h2 class="section-title">Automotive</h2>
         <div class="section-content">
           <div class="automotive-grid">
-            <div class="automotive-card">
+            <div class="automotive-card" onclick="window.open('https://ahosovidaho.github.io/vttv_cz.html', '_blank')" style="cursor: pointer;">
               <i class="fas fa-car"></i>
-              <h3>Automotive žurnalistika</h3>
-              <p>Recenze, testy a novinky ze světa automobilů. Specializuji se na nejnovější trendy a technologie v automotive průmyslu.</p>
+              <h3>Autotesty - VTTV.cz</h3>
+              <p>Testování a natáčení aut se věnuji již od roku 2013. Nejprve pro AutoPeriskop.cz a následně také na zakázku pro další klienty. V roce 2025 jsem začal pomáhat s rozvojem video obsahu na webu Usporne.info</p>
             </div>
-            <div class="automotive-card">
+            <div class="automotive-card" onclick="window.open('https://tiktok.com/@autodevadesatky', '_blank')" style="cursor: pointer;">
               <i class="fas fa-video"></i>
-              <h3>Video obsah</h3>
-              <p>Tvorba zajímavého video obsahu zaměřeného na automotive témata, od testů vozidel po automotive lifestyle.</p>
+              <h3>Autodevadesátky</h3>
+              <p>Vždycky jsem říkal, že není umění udělat půlhodinový test, ale naopak dát vše důležité do podstatně kratšího obsahu. A tak vznikly "AutoDevadesátky" - tedy testy aut v 90 sekundách.</p>
             </div>
-            <div class="automotive-card">
+            <div class="automotive-card" onclick="window.open('https://usporne.info', '_blank')" style="cursor: pointer;">
               <i class="fas fa-users"></i>
-              <h3>Community building</h3>
-              <p>Budování a správa automotive komunit, organizace setkání a eventů pro nadšence automobilů.</p>
+              <h3>Úsporně.info</h3>
+              <p>Na sklonku roku 2024 jsem se dohodl s redakcí webu Usporne.info na spolupráci a tvorbě obsahu. Pro tento web tak natáčím nejen 90s testy, ale celkově pomáhám s rozvojem obsahu a rád bych mu pomohl stát se jedním z nejnavštěvovanějších a nejdůvěryhodnějších serverů zabývajících se testováním automobilů. Stejně tak, pokud jde o jeho sociální sítě.</p>
             </div>
           </div>
         </div>
