--- a/index.html
+++ b/index.html
@@ -820,20 +820,20 @@
         <div class="section-content">
           <p style="font-size: 1.2rem; margin-bottom: 20px; opacity: 0.9;">Sledujte mě na sociálních sítích</p>
           <div class="social-grid">
-            <a href="#" class="social-card">
+            <a href="https://www.linkedin.com/in/viktor-tamayo" target="_blank" class="social-card">
               <i class="fab fa-linkedin"></i>
               <h3>LinkedIn</h3>
-              <p>Profesní síťování a business obsah</p>
+              <p>Objevte více o mé práci na LinkedIn</p>
             </a>
-            <a href="#" class="social-card">
-              <i class="fab fa-youtube"></i>
-              <h3>YouTube</h3>
-              <p>Video obsah o automotive a lifestyle</p>
+            <a href="https://x.com/viktor_tamayo" target="_blank" class="social-card">
+              <i class="fab fa-x-twitter"></i>
+              <h3>X</h3>
+              <p>Aktuálně, osobně a stručně – na X</p>
             </a>
-            <a href="#" class="social-card">
+            <a href="https://www.instagram.com/viktortamayo/" target="_blank" class="social-card">
               <i class="fab fa-instagram"></i>
               <h3>Instagram</h3>
-              <p>Zákulisní momenty a automotive fotografie</p>
+              <p>Střípky ze soukromého a pracovního života</p>
             </a>
           </div>
         </div>
