--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
             <a href="https://www.instagram.com/viktortamayo/" target="_blank" class="social-card">
               <i class="fab fa-instagram"></i>
               <h3>Instagram</h3>
-              <p>Střípky ze soukromého a pracovního života</p>
+              <p>střípky ze soukromého a pracovního života</p>
             </a>
           </div>
         </div>
