--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@
             </div>
           </div>
           <div class="experience-image">
-            <img src="vt.jpeg" alt="Viktor Tamayo - Práce">
+            <img src="exp.jpeg" alt="Viktor Tamayo - Práce">
           </div>
         </div>
       </div>
