--- a/index.html
+++ b/index.html
@@ -958,7 +958,7 @@
             
             if (response.ok) {
               // Úspěšné odeslání - přesměruj na děkujeme stránku
-              window.location.href = 'dekuji.html';
+              window.location.href = 'https://www.tamayo.cz/dekuji.html';
             } else {
               throw new Error('Chyba při odesílání');
             }
