--- a/dekuji.html
+++ b/dekuji.html
@@ -149,10 +149,10 @@
     <div class="check-icon">
       <i class="fas fa-check-circle"></i>
     </div>
-    <h1>Děkuji za vaši zprávu!</h1>
-    <p>Vaše zpráva byla úspěšně odeslána. Odpovím vám co nejdříve, obvykle do 24 hodin.</p>
-    <p>Těším se na spolupráci!</p>
-    <a href="index.html" class="back-button">
+    <h1>Děkuji!</h1>
+    <p>Vaše zpráva byla úspěšně odeslána. Odpovím vám co nejdříve.</p>
+    <p>Přeji vám hezký den!</p>
+    <a href="https://www.tamayo.cz" class="back-button">
       <i class="fas fa-arrow-left"></i>
       Zpět na hlavní stránku
     </a>
