--- a/index.html
+++ b/index.html
@@ -700,11 +700,11 @@
     <div class="nav-content">
       <a href="#home" class="logo-nav">Viktor Tamayo</a>
       <ul class="nav-links">
-        <li><a href="#about">O mně</a></li>
-        <li><a href="#experience">Zkušenosti</a></li>
-        <li><a href="#automotive">Automotive</a></li>
-        <li><a href="#social">Sociální sítě</a></li>
-        <li><a href="#contact">Kontakt</a></li>
+       <li><a href="#about" data-tooltip="O mně"><i class="fas fa-user"></i></a></li>
+        <li><a href="#experience" data-tooltip="Zkušenosti"><i class="fas fa-briefcase"></i></a></li>
+        <li><a href="#automotive" data-tooltip="Automotive"><i class="fas fa-car"></i></a></li>
+        <li><a href="#social" data-tooltip="Sociální sítě"><i class="fas fa-share-alt"></i></a></li>
+        <li><a href="#contact" data-tooltip="Kontakt"><i class="fas fa-envelope"></i></a></li>
       </ul>
     </div>
   </nav>
