--- a/index.html
+++ b/index.html
@@ -714,10 +714,10 @@
     <section id="home" class="hero">
       <div class="hero-content">
         <h1>Viktor Tamayo</h1>
-        <p class="hero-subtitle">Communication, media & automotive enthusiast</p>
+        <p class="hero-subtitle">Communication, media & car enthusiast</p>
         <div class="hero-buttons">
           <a href="#about" class="apple-button">O mně</a>
-          <a href="#experience" class="apple-button secondary">Zkušenosti</a>
+          <a href="#contact" class="apple-button secondary">Kontakt</a>
         </div>
       </div>
       <div class="scroll-indicator">
