--- a/index.html
+++ b/index.html
@@ -348,8 +348,9 @@
 
     .experience-image {
       width: 100%;
-      max-width: 400px;
-      height: 280px;
+      max-width: 500px;
+      height: auto;
+      aspect-ratio: 1346 / 612;
       border-radius: 20px;
       overflow: hidden;
       box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
@@ -364,7 +365,7 @@
     .experience-image img {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain;
       object-position: center center;
     }
 
@@ -895,7 +896,7 @@
             </div>
           </div>
           <div class="experience-image">
-            <img src="exp.jpg" alt="Viktor Tamayo - Zkušenosti">
+            <img src="vt.jpeg" alt="Viktor Tamayo - Práce">
           </div>
         </div>
       </div>
@@ -942,12 +943,12 @@
             <a href="https://x.com/viktor_tamayo" target="_blank" class="social-card">
               <i class="fab fa-x-twitter"></i>
               <h3>X</h3>
-              <p>Aktuálně, osobně a stručně na X</p>
+              <p>Aktuálně, osobně a stručně — na X</p>
             </a>
             <a href="https://www.instagram.com/viktortamayo/" target="_blank" class="social-card">
               <i class="fab fa-instagram"></i>
               <h3>Instagram</h3>
-              <p>Střípky ze soukromého a pracovního života</p>
+              <p>střípky ze soukromého a pracovního života</p>
             </a>
           </div>
         </div>
