--- a/index.html
+++ b/index.html
@@ -896,7 +896,7 @@
             </div>
           </div>
           <div class="experience-image">
-            <img src="vt.jpeg" alt="Viktor Tamayo - Práce">
+            <img src="exp.jpg" alt="Viktor Tamayo - Zkušenosti">
           </div>
         </div>
       </div>
