--- a/index.html
+++ b/index.html
@@ -908,7 +908,7 @@
         <h2 class="section-title">Automotive</h2>
         <div class="section-content">
           <div class="automotive-grid">
-            <div class="automotive-card" onclick="window.open('https://ahosovidaho.github.io/vttv_cz.html', '_blank')" style="cursor: pointer;">
+            <div class="automotive-card" onclick="window.open('#', '_blank')" style="cursor: pointer;">
               <i class="fas fa-car"></i>
               <h3>Autotesty - VTTV.cz</h3>
               <p>Testování a natáčení aut se věnuji již od roku 2013. Nejprve pro AutoPeriskop.cz a následně také na zakázku pro další klienty. V roce 2025 jsem začal pomáhat s rozvojem video obsahu na webu Usporne.info</p>
@@ -960,7 +960,7 @@
       <div class="container">
         <h2 class="section-title">Kontakt</h2>
         <div class="section-content">
-          <p style="font-size: 1.2rem; margin-bottom: 40px; opacity: 0.9;">Máte projekt nebo nápad? Napište mi!</p>
+          <p style="font-size: 1.2rem; margin-bottom: 40px; opacity: 0.9;">Máte projekt, nápad nebo připomínku? Potřebujete poradit nebo konzultaci? Napište mi!</p>
           <form class="contact-form" action="https://formspree.io/f/xjkergle" method="POST">
             <div class="form-group">
               <label for="name">Jméno</label>
