--- a/test.html
+++ b/test.html
@@ -756,44 +756,6 @@
 
     <!-- Video mřížka -->
     <div class="video-grid" id="videoGrid">
-
-    <!-- Zde vkládej HTML kód pro NOVÁ VIDEA -->
-
-       <!-- VIDEO 2 - Volkswagen Golf Variant -->
-      <div class="video-card" data-tags="volkswagen,golf,variant,kombi,test,recenze" onclick="openModal(this)">
-        <div class="video-thumbnail">
-          <img src="https://img.youtube.com/vi/XMER08w5yxo/maxresdefault.jpg" alt="VW Golf Variant Test">
-          <div class="play-overlay">
-            <i class="fas fa-play"></i>
-          </div>
-          <div class="platform-badge youtube">YOUTUBE</div>
-        </div>
-        <div class="video-info">
-          <h3 class="video-title">Volkswagen Golf Variant - Test</h3>
-          <p class="video-description">Praktické kombi od Volkswagenu. Jak se osvědčil Golf Variant v dlouhodobém testu?</p>
-          <div class="video-tags">
-            <span class="video-tag">volkswagen</span>
-            <span class="video-tag">golf</span>
-            <span class="video-tag">variant</span>
-            <span class="video-tag">kombi</span>
-            <span class="video-tag">test</span>
-            <span class="video-tag">recenze</span>
-          </div>
-          <div class="video-meta">
-            <span>10. prosince 2024</span>
-            <span><i class="fab fa-youtube"></i></span>
-          </div>
-        </div>
-        <!-- Skrytá data pro modal -->
-        <div class="video-data" style="display: none;">
-          <span class="video-url">https://youtu.be/XMER08w5yxo</span>
-          <span class="video-platform">youtube</span>
-          <span class="video-date">2024-12-10</span>
-          <span class="video-full-description">Praktické kombi od Volkswagenu. Testujeme prostornost, jízdní vlastnosti a celkovou praktičnost Golf Variantu. Jak se osvědčil v dlouhodobém testu?</span>
-        </div>
-      </div>
-
-    </div>
       
       <!-- VIDEO 1 - Honda CR-V -->
       <div class="video-card" data-tags="honda,cr-v,suv,test,recenze" onclick="openModal(this)">
@@ -828,7 +790,41 @@
         </div>
       </div>
 
-     <!-- Konec vlkádání videí -->
+      <!-- VIDEO 2 - Volkswagen Golf Variant -->
+      <div class="video-card" data-tags="volkswagen,golf,variant,kombi,test,recenze" onclick="openModal(this)">
+        <div class="video-thumbnail">
+          <img src="https://img.youtube.com/vi/dsd-Hw44dzk/maxresdefault.jpg" alt="VW Golf Variant Test">
+          <div class="play-overlay">
+            <i class="fas fa-play"></i>
+          </div>
+          <div class="platform-badge youtube">YOUTUBE</div>
+        </div>
+        <div class="video-info">
+          <h3 class="video-title">Volkswagen Golf Variant - Test</h3>
+          <p class="video-description">Praktické kombi od Volkswagenu. Jak se osvědčil Golf Variant v dlouhodobém testu?</p>
+          <div class="video-tags">
+            <span class="video-tag">volkswagen</span>
+            <span class="video-tag">golf</span>
+            <span class="video-tag">variant</span>
+            <span class="video-tag">kombi</span>
+            <span class="video-tag">test</span>
+            <span class="video-tag">recenze</span>
+          </div>
+          <div class="video-meta">
+            <span>10. prosince 2024</span>
+            <span><i class="fab fa-youtube"></i></span>
+          </div>
+        </div>
+        <!-- Skrytá data pro modal -->
+        <div class="video-data" style="display: none;">
+          <span class="video-url">https://youtu.be/dsd-Hw44dzk</span>
+          <span class="video-platform">youtube</span>
+          <span class="video-date">2024-12-10</span>
+          <span class="video-full-description">Praktické kombi od Volkswagenu. Testujeme prostornost, jízdní vlastnosti a celkovou praktičnost Golf Variantu. Jak se osvědčil v dlouhodobém testu?</span>
+        </div>
+      </div>
+
+    </div>
 
     <!-- Prázdný stav -->
     <div class="empty-state" id="emptyState" style="display: none;">
@@ -1068,6 +1064,8 @@
     }
 
   </script>
+
+
 
 </body>
 </html>
